#725 Fix overlapped style class.

--- a/src/main/webapp/css/slide.css
+++ b/src/main/webapp/css/slide.css
@@ -22,7 +22,7 @@
 }
 @media screen and (min-width: 992px) {
     #content .slideshow-area:-webkit-full-screen,
-    #content .slideshow-area:-moz-full-screen, 
+    #content .slideshow-area:-moz-full-screen,
     #content .slideshow-area:-ms-fullscreen,
     #content .slideshow-area:fullscreen {
         position : fixed ;
@@ -121,20 +121,20 @@
 }
 
 /* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
+.slide-fade {
+  -webkit-animation-name: slide-fade;
   -webkit-animation-duration: 1.5s;
-  animation-name: fade;
+  animation-name: slide-fade;
   animation-duration: 1.5s;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4} 
+@-webkit-keyframes slide-fade {
+  from {opacity: .4}
   to {opacity: 1}
 }
 
-@keyframes fade {
-  from {opacity: .4} 
+@keyframes slide-fade {
+  from {opacity: .4}
   to {opacity: 1}
 }
 
